salesforce/force-app/main/default/objects/Detector__mdt/Detector__mdt.object-meta.xml
<CustomObject>
    <description>Phase 19a — one record per OrgPrism detector. Carries display/config metadata (labels, categories, severity thresholds, recoverability, effort) that used to live as hardcoded constants in 8+ files. The Apex detector class still owns the SOQL + evaluator logic; this mdt owns everything else.</description>
    <label>Detector</label>
    <pluralLabel>Detectors</pluralLabel>
</CustomObject>