salesforce/force-app/main/default/objects/Detector__mdt/fields/ActionHeadline__c.field-meta.xml
<CustomField>
    <fullName>ActionHeadline__c</fullName>
    <label>Action Headline</label>
    <description>Imperative one-line used on the Top Issues card instead of the per-record finding title. "Set tax rules on {N} active products" reads as a directive; the per-record title "Product 'Creativity Suite' missing tax rule" reads as a description. {N} interpolates to the affected count at render time. Leave blank to fall back to the existing per-record title.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>