salesforce/force-app/main/default/objects/Detector__mdt/fields/AppliesTo__c.field-meta.xml
<CustomField>
    <fullName>AppliesTo__c</fullName>
    <label>Applies To</label>
    <description>Semicolon-separated list of product types this detector applies to (CPQ;CPQ+Billing;ARM).</description>
    <type>Text</type>
    <length>120</length>
</CustomField>