salesforce/force-app/main/default/objects/Detector__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <description>Which dashboard card this detector rolls up into. One of: revenue, governance, pipeline, pricing.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>