salesforce/force-app/main/default/objects/Detector__mdt/fields/CriticalThresholdUsd__c.field-meta.xml
<CustomField>
    <fullName>CriticalThresholdUsd__c</fullName>
    <label>Critical Threshold (USD)</label>
    <description>Findings with gap above this value are marked Critical.</description>
    <type>Number</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>