salesforce/force-app/main/default/objects/Detector__mdt/fields/DetectorId__c.field-meta.xml
<CustomField>
    <fullName>DetectorId__c</fullName>
    <label>Detector Id</label>
    <description>Stable identifier (e.g. REN-001) — matches DetectorId__c on ForensicFinding__c.</description>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>