salesforce/force-app/main/default/objects/Detector__mdt/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <label>Effort</label>
    <description>Effort band shown on Impact x Effort matrix. low | medium | high.</description>
    <type>Text</type>
    <length>10</length>
</CustomField>