salesforce/force-app/main/default/objects/Detector__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Active</label>
    <description>When false, this detector is skipped at scan time. Lets customers disable a detector without uninstalling.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>