salesforce/force-app/main/default/objects/Detector__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Display Label</label>
    <description>Short human-readable label shown across dashboard, PDF, and reports.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>