salesforce/force-app/main/default/objects/Detector__mdt/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <label>Long Description</label>
    <description>Admin-facing prose for this detector. Four lines: what it finds; why it matters; when to suppress a single finding; when to disable the detector entirely. Used on the detector catalog page and the finding triage view to help admins decide IsActive on/off vs per-finding suppression vs AppliesTo scope changes.</description>
    <type>LongTextArea</type>
    <length>1024</length>
</CustomField>