salesforce/force-app/main/default/objects/Detector__mdt/fields/RecoverabilityScore__c.field-meta.xml
<CustomField>
    <fullName>RecoverabilityScore__c</fullName>
    <label>Recoverability Score</label>
    <description>0.00-1.00 — proportion of the gap this detector typically recovers when staged + committed. Used by Trust Score, Impact x Effort, and ROI.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>