salesforce/force-app/main/default/objects/Detector__mdt/fields/RequiredSurface__c.field-meta.xml
<CustomField>
    <fullName>RequiredSurface__c</fullName>
    <label>Required Surface</label>
    <description>Optional. Specifies which managed package or feature surface must be present in the target org for this detector to run. Semicolon-separated; ANY match enables the detector. Examples: "SBQQ" (CPQ), "blng" (Billing), "ProductSellingModel" (Revenue Cloud / ARM). When blank, detector runs regardless. Phase 22a-0.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>