salesforce/force-app/main/default/objects/Detector__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <description>Default severity for findings from this detector, matching the Vercel-side spec. Detectors read this as the floor; gap-USD based logic can escalate above it but never demote below it. Values: Critical | Warning | Info.</description>
    <type>Text</type>
    <length>16</length>
</CustomField>