salesforce/force-app/main/default/objects/Detector__mdt/fields/WarningThresholdUsd__c.field-meta.xml
<CustomField>
    <fullName>WarningThresholdUsd__c</fullName>
    <label>Warning Threshold (USD)</label>
    <description>Findings with gap above this value (but below Critical) are marked Warning. Below this = Info.</description>
    <type>Number</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>